--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>PRIVATE</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="block1.css">
     <link rel="stylesheet" href="block2.css">
     <link rel="stylesheet" href="block3.css">
-    <link rel="stylesheet" href="animation.css">
     <style media="screen">
     @font-face {
     font-family: TT Hazelnuts Edu;
@@ -17,9 +17,10 @@
         height: 100%;
       }
       body{
-        width: 1440px;
+        width: 100%;
         background-color: white;
         display: block;
+        width: 1440px;
         height: 7900px;
         margin: 0 auto;
         position: relative;
