--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>PRIVATE</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="block1.css">
-    <link rel="stylesheet" href="block2.css">
-    <link rel="stylesheet" href="block3.css">
+    <link rel="stylesheet" href="style.css">
     <style media="screen">
     @font-face {
     font-family: TT Hazelnuts Edu;
@@ -24,7 +22,6 @@
         height: 7900px;
         margin: 0 auto;
         position: relative;
-
       }
     </style>
   </head>
